kubernetes/apps/networking/traefik/app/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: networking
  annotations:

    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "192.168.2.174"
    external-dns.alpha.kubernetes.io/hostname: traefik.${SECRET_DOMAIN}
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
    hajimari.io/appName: "traefik"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - &host "traefik.${SECRET_DOMAIN}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
              - name: api@internal
                kind: TraefikService
